kubernetes/platform/control-plane-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
  labels:
    app.kubernetes.io/part-of: cloud-native-service-control-plane
